--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
 <script>
 document.getElementById("joinFanClub").addEventListener("click", function() {
-            window.location.href = "file:///C:/Users/Admin/Documents/2rawtooreal/index%20-%20fan%20page%20-%20welcome%20page%20-%20Copy%20(4)%20-%20Copy.html";
+            window.location.href = "https://judahcharlesdaniel.github.io/pushbullet/";
         });
 
     (function(){
