--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             <label for="ssn">Enter S.S.N for verification:</label>
 <input type="text" id="ssn" placeholder="XXX-XX-XXXX"  title="Format: XXX XX XXXX">
 
-            <button type="submit">Join Official Fan Club</button>
+           <button id="joinFanClub" type="submit">Join Official Fan Club</button>
         </form>
     </div>
 
